samples/_failures_safe/1761220194_143f0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bc71bce.c: In function ‘main’:
./samples/SAFE/__tmp_8bc71bce.c:140:23: error: ‘compute’ undeclared (first use in this function)
  140 |         double detA = compute
      |                       ^~~~~~~
./samples/SAFE/__tmp_8bc71bce.c:140:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8bc71bce.c:140:9: error: expected ‘,’ or ‘;’ at end of input
  140 |         double detA = compute
      |         ^~~~~~
./samples/SAFE/__tmp_8bc71bce.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bc71bce.c:140:9: error: expected declaration or statement at end of input
